# itinerary

./: .gitignore  .lighthouserc.json  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: checks.yml
docs/: 404.html  budget-content.js  budget-content.min.js  budget-ui.js  budget-ui.min.js  critical.css  culture.html  essentials-content.js  food.html  guide.html  index.html  itinerary-offline.html  itinerary.html  japan-escape-itinerary-offline.html  japan_trip_brochure.html  manifest.webmanifest  quick_snapshot.html  route-content.js  route-content.min.js  route.css  script.js  script.min.js  service-worker.js  service-worker.template.js  site_info.html  style.css  style.min.css  toolkit.html  travel-sheet.html
docs/assets/: site.css  site.js
docs/assets/app/: asset-manifest.json  budgetContent.0b78fc2219.js  budgetContent.12d4bb9541.js  budgetContent.18da69970b.js  budgetContent.2505fd076d.js  budgetContent.308daf06b7.js  budgetContent.362d120913.js  budgetContent.528d1a37b5.js  budgetContent.5290b65efc.js  budgetContent.571ce1b746.js  budgetContent.5d408c20ef.js  budgetContent.64bae435ff.js  budgetContent.66be13d8f0.js  budgetContent.8916d32a7f.js  budgetContent.d431cd887d.js  budgetContent.df7c63bbe0.js  budgetContent.e3f2d3f1db.js  budgetContent.f0d178d7f3.js  (+196 more)
scripts/: build-offline-snapshot.js  build-section-content.js  build-service-worker.js  inline-css.js  run-perf.js  sync-route-map-vendor.js  version-app-assets.js
src/app/: flight_finder.py  main.py
tests/: test_flight_finder.py  test_main.py
(+6 files in other folders)
