[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-beginner-project"
version = "0.1.0"
description = "A beginner-friendly Python starter project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fast-flights>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
